[package]
name = "raytracer-gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
encase = { version = "0.6.1", features = ["nalgebra"] }
nalgebra = "0.32.3"
tokio = { version = "1.35.1", features = ["full"] }
wgpu = { version = "0.18.0", features = ["wgc"] }
winit = { version = "0.29.7", features = ["rwh_05"] }
